[package]
name = "rbd_dimmer"
version = "0.1.3"
authors = ["Emeric Martineau <11473190+emeric-martineau@users.noreply.github.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.66"
description = "Rewrite RBDDimmer for Rust. Work only on ESP32"
homepage = "https://github.com/emeric-martineau/rbd_dimmer"
keywords = ["embedded", "RBDDimmer", "Esp32"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/emeric-martineau/rbd_dimmer"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "hal", "esp-idf-sys/native"]
std = ["alloc", "esp-idf-sys/std", "esp-idf-sys/binstart", "embedded-svc?/std", "esp-idf-hal?/std", "esp-idf-svc?/std"]
alloc = ["embedded-svc?/alloc", "esp-idf-hal?/alloc", "esp-idf-svc?/alloc"]
hal = ["esp-idf-hal", "embedded-svc", "esp-idf-svc"]

# embassy = ["esp-idf-hal?/embassy-sync", "esp-idf-hal?/critical-section", "esp-idf-svc?/embassy-time-driver", "esp-idf-svc?/embassy-time-isr-queue"]
#experimental = ["embedded-svc?/experimental", "esp-idf-svc?/experimental"]
#all = ["std", "nightly", "experimental", "embassy"]
#pio = ["esp-idf-sys/pio"]
#nightly = ["embedded-svc?/nightly", "esp-idf-svc?/nightly"] # Future: "esp-idf-hal?/nightly"

[dependencies]
log = { version = ">=0.4.17", default-features = false }
esp-idf-sys = { version = ">=0.33.7", default-features = false }
esp-idf-hal = { version = ">=0.42.5", optional = true, default-features = false }
esp-idf-svc = { version = ">=0.47.3", optional = true, default-features = false }
embedded-svc = { version = ">=0.26.4", optional = true, default-features = false }
embedded-hal = ">=0.2.7"
liquidcrystal_i2c-rs = "0.1.0"
edge-executor = ">=0.4.0"

[build-dependencies]
embuild = "0.31.4"
